# climate_metrics

./: .buildinfo  API.html  Explanation.html  How-to.html  README.html  README.md  changelog.rst  climate_metrics.py  genindex.html  index.html  objects.inv  readme.md  requirements-dev.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: continuous_integration.yml  sphinx.yml
API/: climate_metrics.GTP.html  climate_metrics.GWP.html  climate_metrics.cumulative_radiative_forcing.html  climate_metrics.radiative_forcing_from_emissions_scenario.html  climate_metrics.temperature_response.html
_sources/: API.rst.txt  How-to.rst.txt  README.md.txt  index.rst.txt
_sources/API/: climate_metrics.GTP.rst.txt  climate_metrics.GWP.rst.txt  climate_metrics.cumulative_radiative_forcing.rst.txt  climate_metrics.radiative_forcing_from_emissions_scenario.rst.txt  climate_metrics.temperature_response.rst.txt
_sources/notebooks/: A-motivating-example.ipynb.txt  IPCC_climate_metrics.ipynb.txt
_static/: documentation_options.js
docs/: API.rst  Explanation.rst  conf.py  index.rst  readme.md  requirements.txt
docs/notebooks/: A-motivating-example.ipynb
notebooks/: A-motivating-example.html  A-motivating-example.ipynb  IPCC_climate_metrics.html  IPCC_climate_metrics.ipynb
tests/: test_climate_metrics.py
