[metadata]
name = climate_metrics
version = 0.1.0
description = Climate metrics for greenhouse gas accounting
keywords = 
  GWP
  GTP
  global warming potential
  global average temperature change potential
  GHG
  greenhouse gas
  climate metrics
license = MIT License
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
scripts = climate_metrics.py
install_requires =
  numpy
  scipy

[flake8]
max-complexity=10
max-line-length=90